--- a/html/bseats.html
+++ b/html/bseats.html
@@ -37,7 +37,7 @@
           <input type="text" class="form-control">
         </div>
         <div class="col">
-          <input type="text" class="form-control">
+          <!-- <input type="text" class="form-control"> -->
         </div>
       </div>
 
